--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/platform-express": "^9.0.11",
+    "@nestjs/swagger": "^6.1.1",
     "class-validator": "^0.13.2",
     "mongodb": "^4.9.0",
     "passport-google-oauth20": "^2.0.0",
