--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "nestjs-pino": "^3.1.1",
-    "pino-http": "^8.2.0",
-    "rxjs": "^7.5.6"
+    "pino-http": "^8.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.1.1",
@@ -53,7 +52,6 @@
     "jest": "^28.1.3",
     "migrate-mongo": "^9.0.0",
     "prettier": "^2.7.1",
-    "supertest": "^6.2.4",
     "ts-jest": "^28.0.8",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
